[gd_scene load_steps=12 format=3 uid="uid://ce0j656858y7m"]

[ext_resource type="PackedScene" uid="uid://bovy2xg7fihrl" path="res://UIObjects/AvalonMenu/WarriorMenus/WarriorStatusMenu/WarriorStatusMenuElements/WarriorNameLabel.tscn" id="1_5oykt"]
[ext_resource type="Script" path="res://UIObjects/AvalonMenu/WarriorMenus/WarriorStatusMenu/WarriorStatusMenu.gd" id="1_wvtgu"]
[ext_resource type="PackedScene" uid="uid://bas1srv86w6ts" path="res://UIObjects/AvalonMenu/WarriorMenus/WarriorStatusMenu/WarriorStatusMenuElements/WarriorLevelLabel.tscn" id="2_guqo7"]
[ext_resource type="PackedScene" uid="uid://bemfpoqnf7jho" path="res://UIObjects/AvalonMenu/WarriorMenus/WarriorStatusMenu/WarriorStatusMenuElements/WarriorExperienceLabel.tscn" id="3_q5wh8"]
[ext_resource type="PackedScene" uid="uid://ckxnegjc37ehh" path="res://UIObjects/AvalonMenu/WarriorMenus/WarriorStatusMenu/WarriorStatusMenuElements/WarriorAbilityPointsLabel.tscn" id="4_sto2l"]
[ext_resource type="Theme" uid="uid://q8fchd6stpns" path="res://UIObjects/Themes/CyberTheme.tres" id="6_woj3s"]
[ext_resource type="PackedScene" uid="uid://7qr6d5kiavc8" path="res://UIObjects/CombatUI/Healthbar/ArmourBar.tscn" id="7_s4ctl"]
[ext_resource type="PackedScene" uid="uid://bg365ya67tc63" path="res://UIObjects/CombatUI/Healthbar/HealthBar.tscn" id="8_m67eh"]
[ext_resource type="PackedScene" uid="uid://du8nkqi1ll2p2" path="res://UIObjects/CombatUI/Healthbar/ManaBar.tscn" id="9_25puw"]
[ext_resource type="PackedScene" uid="uid://6bf8knfrvrw7" path="res://UIObjects/PlayerHUD/MoraleBuffs/MoraleBuffHudUI.tscn" id="10_k0f07"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7i6uy"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="WarriorStatusMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wvtgu")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(1150, 0)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7i6uy")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="WarriorNameLabel" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2" instance=ExtResource("1_5oykt")]
layout_mode = 2

[node name="WarriorLevelLabel" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2" instance=ExtResource("2_guqo7")]
layout_mode = 2

[node name="WarriorExperienceLabel" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2" instance=ExtResource("3_q5wh8")]
layout_mode = 2

[node name="WarriorAbilityPointsLabel" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer2" instance=ExtResource("4_sto2l")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("6_woj3s")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Armour:"

[node name="ArmourBar" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("7_s4ctl")]
layout_mode = 2
dynamic_length = true
length_to_max_value_ratio = 4.0

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("6_woj3s")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Health:"

[node name="PlayerHealthBar" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("8_m67eh")]
custom_minimum_size = Vector2(400, 20)
layout_mode = 2
dynamic_length = true
length_to_max_value_ratio = 4.0

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("6_woj3s")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Mana:"

[node name="ManaBar" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3" instance=ExtResource("9_25puw")]
layout_mode = 2
dynamic_length = true
length_to_max_value_ratio = 4.0

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme = ExtResource("6_woj3s")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Buffs:"
vertical_alignment = 1

[node name="MoraleBuffHUDUI" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer4" instance=ExtResource("10_k0f07")]
layout_mode = 2
